--- a/style.css
+++ b/style.css
@@ -1,9 +1,89 @@
-body{
-    background-color: whitesmoke;
+:root{
+    --azul3: #90b1e2;
+    --azul2: #4a5a74;
+    --azul1: #303f97;
 }
 
-footer{
-    background-color: black;
+body {
+    background-image: url('images/over-50-frutiger-aero-wallpapers-2008ify-your-pc-v0-9ckfyod2nz9b1.jpg');
+    font-family: 'Roboto Slab';
+}
+
+#container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 4rem;
+    gap: 3rem;
+}
+
+.cartao {
+    margin: 1rem 1rem;
+    border-radius: 0.8em;
+    background-color: #303f97;
+    height: 20rem;
+    flex-grow: 1;
+    flex-basis: calc(33% - 6rem);
+}
+
+.cartao-conteudo {
+    text-align: center;
+    background-color: #90b1e2;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 300ms ease-in-out;
+}
+
+.cartao-conteudo h3 {
+    background-color: white;
+    color: black;
+    text-align: left;
+    position: absolute;
+    border: 2px solid #303f97;
+    padding: 0.5em;
+    margin: 0.6rem;
+    border-radius: 0.4em;
+    font-size: 1vw;
+    backface-visibility: hidden;
+}
+
+.cartao-conteudo p {
+    margin-top: 1rem;
+    padding: 2rem;
+    margin-top: 4rem;
+}
+
+.cartao-conteudo-pergunta p {
+    font-weight: 600;
+}
+
+.cartao:hover .cartao-conteudo{
+    transform: rotateY(180deg);
+}
+
+.cartao-conteudo-pergunta,
+.cartao-conteudo-resposta{
+    backface-visibility: hidden;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+.cartao-conteudo-resposta{
+    transform: rotateY(180deg);
+}
+
+footer {
+    background-color: #000000;
     color: white;
-    position:
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 2rem;
+}
+
+footer p {
+    text-align: center;
+    font-size: 0.6rem;
+    margin-top: 0.5rem;
 }
