--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
     font-weight: 600;
 }
 
-.cartao:hover .cartao-conteudo{
+.cartao.active .cartao-conteudo{
     transform: rotateY(180deg);
 }
 
